tests/org.eclipse.mylyn.docs.intent.parser.test/dataTests/intentDocuments/errors/property.intent
Document {
	Chapter {
		Section Merge {
			Merging models.
			
			@M
				Resource r {
					URdI = "platform:/resource/intent/My.ecore";
				}
			M@
			
		}
	}
}
